--- a/languages/es_ES.po
+++ b/languages/es_ES.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2018-10-05 09:57-0400\n"
+"PO-Revision-Date: 2018-10-05 10:06-0400\n"
 "Language-Team: \n"
 "X-Generator: Poedit 1.8.7.1\n"
 "Last-Translator: RogerTM <hi@themingisprose.com>\n"
@@ -363,7 +363,7 @@ msgstr "&mdash; Seleccionar %s &mdash;"
 
 #: meta/meta-postcard.php:22
 msgid "Source or author"
-msgstr "Fuenta o autor"
+msgstr "Fuente o autor"
 
 #: meta/meta-postcard.php:27
 msgid "Photo by"
